[package]
name = "downsample-oxide"
version = "0.1.1"
edition = "2021"
authors = ["Billy Sheppard"]
license = "MIT"
keywords = ["downsampling", "data", "lttb", "buckets", "charts"]
categories = ["visualization", "date-and-time"]
readme = "README.md"
description = "Largest Triangle Three Buckets Implementation"
repository = "https://github.com/Billy-Sheppard/downsample-oxide"
homepage = "https://github.com/Billy-Sheppard/downsample-oxide"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.29.0"
time_crate = {package = "time", version = "0.3.20", optional = true }
chrono_crate = {package = "chrono", version = "0.4.24", optional = true }

[dev-dependencies]
chrono_crate = {package = "chrono", version = "0.4.24"}

[features]
time = ["time_crate"]
chrono = ["chrono_crate"]
